--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Language" content="pt-BR" />
     <link rel="icon" type="image/svg+xml" href="/proviewer.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ProViewer - Sistema de Liquidacao</title>
+    <title>Sistema de Liquidacao</title>
   </head>
   <body>
     <div id="root"></div>
