--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" type="image/svg+xml" href="/proviewer.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema De Revisao</title>
+    <link rel="preload" href="/pdf.worker.min.mjs" as="script" crossorigin />
+    <link rel="preload" href="/wasm/openjpeg.wasm" as="fetch" crossorigin type="application/wasm" />
+    <link rel="preload" href="/wasm/qcms_bg.wasm" as="fetch" crossorigin type="application/wasm" />
   </head>
   <body>
     <div id="root"></div>
